[metadata]
name = gante_project_euler
version = UNVERSIONED
description = Python + JAX approach to the Project Euler problems
long_description = file: README.md
url = https://github.com/gante/project_euler.git
author = gante
author_email = joaofranciscocardosogante@gmail.com

[options]
packages = find:
include_package_data=True
install_requires =
  numpy
  jax
  jaxlib
  pytest
